# TheBot

./: README.md  pyproject.toml  requirements.txt
dofa_bot/: __init__.py  bot.py
dofa_bot/commands/: deck.py  echo.py  feedback.py  pc.py
dofa_bot/utils/: logger.py
