[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dofa-bot"
authors = [{name = "Chris Broz", email = "broz@DeckOfAdventures.com"}]
description = "ADD LATER"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ADD", "LATER"]
license = {text = "MIT"}
classifiers = ["Programming Language :: Python :: 3"]
version = "1.0.0"
dynamic = ["dependencies"]

[project.optional-dependencies]
pdf = ["pdf2image"]

[project.urls]
homepage = "https://deckofadventures.github.io/TheGame"

# [tool.black]
# line-length = 88
# target-version = 'py39'

[tool.isort]
line_length = 88
profile = 'black'

[tool.setuptools]
py-modules = ["the_bot"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/